remove Home paragraph if we have a project wiki configured

--- a/app/views/_global_wiki_page.html.erb
+++ b/app/views/_global_wiki_page.html.erb
@@ -2,7 +2,8 @@
 
  <script type="text/javascript">
     $(document).ready(function($) {
-       var wiki_container = $(".splitcontentleft > .wiki")[0].remove();
+       $(".splitcontentleft > .wiki")[0].remove();
+       $("#content > h2")[0].remove();
      });
   </script>
 
