--- a/app/views/custom_links/edit.html.erb
+++ b/app/views/custom_links/edit.html.erb
@@ -3,5 +3,5 @@
 
 <%= form_for @custom_link do |f| %>
   <%= render :partial => 'custom_links/form', :locals => { :f => f, :exclude_self => @custom_link.name } %>
-  <%= submit_tag l('custom_menu_link.edit'), :name => "edit" %>
+ <div class="link-submit"> <%= submit_tag l('custom_menu_link.edit'), :name => "edit" %> </div>
 <% end %>
